Fix: adjust spacing of h1 underline

--- a/docs/imprintcss.com/app/globals.css
+++ b/docs/imprintcss.com/app/globals.css
@@ -4,4 +4,5 @@
 
 body > main {
     @apply m-auto;
+    @apply text-justify;
 }
